--- a/framework/nbproject/private/private.properties
+++ b/framework/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\itu\\AppData\\Roaming\\NetBeans\\8.0.2\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\p15B-54-Toky\\AppData\\Roaming\\NetBeans\\13\\tomcat80.properties
 j2ee.server.domain=C:/Users/itu/AppData/Roaming/NetBeans/8.0.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 8.5
+j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\itu\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\p15B-54-Toky\\AppData\\Roaming\\NetBeans\\13\\build.properties
