--- a/Test/nbproject/project.properties
+++ b/Test/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.framework.jar=build\\web\\WEB-INF\\lib\\framework.jar
+file.reference.framework.jar=web/WEB-INF/lib/framework.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
