--- a/Test/nbproject/private/private.properties
+++ b/Test/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\p15B-54-Toky\\AppData\\Roaming\\NetBeans\\13\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\P15B-54-Toky\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
 j2ee.server.domain=C:/Users/itu/AppData/Roaming/NetBeans/8.0.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 8.5
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\p15B-54-Toky\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\P15B-54-Toky\\AppData\\Roaming\\NetBeans\\13\\build.properties
